Added Role based UI components with backend implementation